# Coding_Challenge_Ehsan_Amin

./: pyproject.toml  target.parquet
notebooks/: data_exploration.ipynb  modeling.ipynb
src/: metrics.py  utils.py
