[project]
name = "coding-challenge-ehsan-amin"
version = "0.1.0"
description = ""
authors = [
    {name = "Ehsan Amin",email = "ehsan.amin@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "matplotlib (>=3.5,<3.11)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "numpy (==1.23.5)",
    "setuptools (>=78.1.0,<79.0.0)",
    "packaging (>=24.2,<25.0)",
    "scipy (==1.9.3)",
    "statsmodels (==0.13.5)",
    "catboost (>=1.2.7,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "optuna (>=4.2.1,<5.0.0)",
    "pyclustertend (>=1.9.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
